[package]
name = "zcp"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0"
description = "A zero-copy cp using sendfile64"
repository = "https://github.com/FyraLabs/zcp"

keywords = ["filesystem", "linux", "zerocopy", "sendfile", "cli"]

[dependencies]
nix = { version = "0.29.0", features = ["zerocopy", "ioctl"] }
